@@ -41,11 +41,13 @@ image.default <- function (x = seq(0, 1, len = nrow(z)),
         stop("`z' must be a matrix")
     if (length(x) > 1 && length(x) == nrow(z)) { # midpoints
         dx <- 0.5*diff(x)
-        x <- c(x[1] - dx[1], x[1]+dx[1], x[-1]+dx)
+        x <- c(x[1] - dx[1], x[-length(x)]+dx,
+               x[length(x)]+dx[length(x)-1])
     }
     if (length(y) > 1 && length(y) == ncol(z)) { # midpoints
         dy <- 0.5*diff(y)
-        y <- c(y[1] - dy[1], y[1]+dy[1], y[-1]+dy)
+        y <- c(y[1] - dy[1], y[-length(y)]+dy,
+               y[length(y)]+dy[length(y)-1])
     }
     if (length(x) == 1) x <- par("usr")[1:2]
     if (length(y) == 1) y <- par("usr")[3:4]
